--- a/package.json
+++ b/package.json
@@ -1,71 +1,73 @@
 {
-    "name": "reddit-clone",
-    "version": "0.0.0",
-    "license": "MIT",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^4.0.0",
-        "@angular/common": "^4.0.0",
-        "@angular/compiler": "^4.0.0",
-        "@angular/core": "^4.0.0",
-        "@angular/forms": "^4.0.0",
-        "@angular/http": "^4.0.0",
-        "@angular/platform-browser": "^4.0.0",
-        "@angular/platform-browser-dynamic": "^4.0.0",
-        "@angular/router": "^4.0.0",
-        "@ngrx/core": "^1.2.0",
-        "@ngrx/effects": "github:ngrx/effects",
-        "@ngrx/store": "^4.0.0",
-        "angular-sweetalert-service": "^2.0.2",
-        "angular2-notifications": "^0.7.4",
-        "angular2-simple-countdown": "0.0.6",
-        "apollo-angular": "^0.13.0",
-        "apollo-client": "^1.9.1",
-        "bootstrap": "^3.3.7",
-        "core-js": "^2.4.1",
-        "easing": "0.0.4",
-        "flexslider": "^2.6.3",
-        "font-awesome": "^4.7.0",
-        "graphql-tag": "^2.4.2",
-        "ionicons": "^3.0.0",
-        "jquery": "^3.2.1",
-        "ng2-date-countdown": "0.0.3",
-        "ngrx-store-logger": "^0.1.8",
-        "ngx-cookie-service": "^1.0.7",
-        "ngx-pagination": "^3.0.1",
-        "reselect": "^3.0.1",
-        "rxjs": "^5.4.1",
-        "sweetalert2": "^6.6.6",
-        "zone.js": "^0.8.14"
-    },
-    "devDependencies": {
-        "@angular/cli": "1.2.4",
-        "@angular/compiler-cli": "^4.0.0",
-        "@angular/language-service": "^4.0.0",
-        "@types/jasmine": "~2.5.53",
-        "@types/jasminewd2": "~2.0.2",
-        "@types/jquery": "^3.2.9",
-        "@types/node": "~6.0.60",
-        "codelyzer": "~3.0.1",
-        "jasmine-core": "~2.6.2",
-        "jasmine-spec-reporter": "~4.1.0",
-        "karma": "~1.7.0",
-        "karma-chrome-launcher": "~2.1.1",
-        "karma-cli": "~1.0.1",
-        "karma-coverage-istanbul-reporter": "^1.2.1",
-        "karma-jasmine": "~1.1.0",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "protractor": "~5.1.2",
-        "ts-node": "~3.0.4",
-        "tslint": "~5.3.2",
-        "typescript": "~2.3.3"
-    }
+  "name": "reddit-clone",
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "github:ngrx/effects",
+    "@ngrx/store": "^4.0.0",
+    "angular-sweetalert-service": "^2.0.2",
+    "angular2-notifications": "^0.7.4",
+    "angular2-simple-countdown": "0.0.6",
+    "angularfire2": "^4.0.0-rc.2",
+    "apollo-angular": "^0.13.0",
+    "apollo-client": "^1.9.1",
+    "bootstrap": "^3.3.7",
+    "core-js": "^2.4.1",
+    "easing": "0.0.4",
+    "firebase": "^4.4.0",
+    "flexslider": "^2.6.3",
+    "font-awesome": "^4.7.0",
+    "graphql-tag": "^2.4.2",
+    "ionicons": "^3.0.0",
+    "jquery": "^3.2.1",
+    "ng2-date-countdown": "0.0.3",
+    "ngrx-store-logger": "^0.1.8",
+    "ngx-cookie-service": "^1.0.7",
+    "ngx-pagination": "^3.0.1",
+    "reselect": "^3.0.1",
+    "rxjs": "^5.4.1",
+    "sweetalert2": "^6.6.6",
+    "zone.js": "^0.8.14"
+  },
+  "devDependencies": {
+    "@angular/cli": "1.2.4",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/language-service": "^4.0.0",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.9",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~3.0.1",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.0.4",
+    "tslint": "~5.3.2",
+    "typescript": "~2.3.3"
+  }
 }
